--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.2"
+  "name": "jobtask",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "jsonwebtoken": "^9.0.1"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
