text-editor files-> foring done

--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "jobtask",
+  "name": "notes_app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "npm start --prefix server",
+    "client": "npm run dev --prefix client",
+    "start": "concurrently --kill-others-on-fail \" npm run server\" \" npm run client\""
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Asif Nihal",
+  "license": "ISC",
+  "dependencies": {
+    "react-icons": "^4.10.1"
+  }
 }
