--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,22 @@
 {
-  "name": "server",
+  "name": "note_app_api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon src/server.ts",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "keywords": [],
-  "author": "",
+  "author": "nhl007",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -31,6 +40,8 @@
     "@types/node": "^20.4.8",
     "@types/validator": "^13.9.0",
     "nodemon": "^3.0.1",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
