--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "note_app_api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon src/server.ts",
     "build": "rimraf dist && tsc",
