--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": "2",
   "builds": [
     {
       "src": "dist/server.js",
@@ -9,7 +10,11 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/server.js"
+      "dest": "dist/server.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     }
   ]
 }
