--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "react-icons": "^4.10.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17"
   }
 }
