--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,23 +9,15 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/.*",
       "dest": "dist/server.js",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "https://nhl007noteapp.netlify.app"
-        },
-        { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
-        }
-      ]
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
+        "Access-Control-Allow-Headers": "Authorization,Content-Type",
+        "Access-Control-Allow-Credentials": "true"
+      }
     }
   ]
 }
