--- a/server/vercel.json
+++ b/server/vercel.json
@@ -10,14 +10,7 @@
   "routes": [
     {
       "src": "/api/.*",
-      "dest": "dist/server.js",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
-        "Access-Control-Allow-Headers": "Authorization,Content-Type",
-        "Access-Control-Allow-Credentials": "true"
-      }
+      "dest": "dist/server.js"
     }
   ]
 }
