--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -28,6 +28,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
+    "allowUnreachableCode": false,
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
     }
