--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,11 +9,11 @@
   ],
   "routes": [
     {
-      "src": "/api/.*",
+      "src": "/(.*)",
       "dest": "dist/server.js",
       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Origin": "https://nhl007noteapp.netlify.app",
         "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
         "Access-Control-Allow-Headers": "Authorization,Content-Type",
         "Access-Control-Allow-Credentials": "true"
